# aiminem

./: .env  .env.sample  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
web/: app.py
